--- a/internal/config/config.yaml
+++ b/internal/config/config.yaml
@@ -217,6 +217,22 @@
 
         This is typically a long string of characters that you can generate in the SendGrid dashboard.
 
+- section: MoEngage
+  description: |-
+    MoEngage event sending configuration. When unset, MoEngage event sending is disabled.
+  fields:
+    - env: "MOENGAGE_APP_KEY"
+      name: MoEngageAppKey
+      type: string
+      description: |-
+        The MoEngage app key used to identify your MoEngage application.
+
+    - env: "MOENGAGE_AUTH_KEY"
+      name: MoEngageAuthKey
+      type: string
+      description: |-
+        The MoEngage auth key used to authenticate API requests.
+
 - section: Authentication
   description: |-
     Authentication providers configuration. These are all optional, you can choose to enable any combination of them to allow members of your community to sign up and sign in using a third party provider.
