--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -30,6 +30,18 @@ COPY ./web .
 ENV NEXT_TELEMETRY_DISABLED=1
 ENV NEXT_BUILD_STANDALONE=true
 
+ARG NEXT_PUBLIC_API_ADDRESS
+ARG NEXT_PUBLIC_WEB_ADDRESS
+ARG NEXT_PUBLIC_ERP_URL
+ARG NEXT_PUBLIC_MOENGAGE_APP_ID
+ARG NEXT_PUBLIC_MOENGAGE_CLUSTER
+ARG NEXT_PUBLIC_MOENGAGE_DEBUG_LOGS
+
+ENV NEXT_PUBLIC_ERP_URL=${NEXT_PUBLIC_ERP_URL}
+ENV NEXT_PUBLIC_MOENGAGE_APP_ID=${NEXT_PUBLIC_MOENGAGE_APP_ID}
+ENV NEXT_PUBLIC_MOENGAGE_CLUSTER=${NEXT_PUBLIC_MOENGAGE_CLUSTER}
+ENV NEXT_PUBLIC_MOENGAGE_DEBUG_LOGS=${NEXT_PUBLIC_MOENGAGE_DEBUG_LOGS}
+
 # NOTE: A regular Next.js build will attempt to do static generation for every
 # page. But we don't want to constantly be adding force-dynamic to every page so
 # this ensures no SSG runs during the Docker build.
